# pips

./: .gitignore  LICENSE  MANIFEST.in  README.md  digest.txt  pyproject.toml  requirements.txt
src/pips/: __init__.py  __main__.py  core.py  gradio_app.py  model_registry.py  models.py  prompts.py  utils.py  web_app.py
src/pips/saved_examples/: movies.json  time_arithmetic.json  word_sorting.json
src/pips/static/: README.md
src/pips/static/css/: base.css  main.css  tokens.css
src/pips/static/css/components/: buttons.css  chat.css  feedback.css  forms.css  modal.css  panels.css  responsive.css  sessions.css  utilities.css
src/pips/static/default_sessions/: builtin_sessions.json
src/pips/static/js/: main.js
src/pips/static/js/core/: logger.js  state.js  storage.js
src/pips/static/js/handlers/: socket-handlers.js
src/pips/static/js/network/: socket.js
src/pips/static/js/ui/: dom-manager.js  image-handler.js  interactive-feedback.js  message-manager.js  session-manager.js  settings-manager.js
src/pips/templates/: index_modular.html
tests/: test_solver.py
